# bobyqa

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  THIRD-PARTY-NOTICES
.cargo/: mutants.toml
.github/workflows/: ci.yml  release.yml
benches/: solver.rs
src/: bobyqb.rs  consts.rs  geometry.rs  initialize.rs  lib.rs  linalg.rs  mat.rs  math.rs  powalg.rs  rescue.rs  test_support.rs  trustregion.rs  update.rs  util.rs
tests/: alloc.rs  kernel_counts.rs  parity_prima.rs
tests/goldens/: beale_n2_npt5.txt  booth_n2_npt5.txt  booth_rescue_n2_npt5.txt  nansphere_n2_npt5.txt  powell_singular_n4_npt15.txt  powell_singular_n4_npt9.txt  rosenbrock10_n10_npt21.txt  rosenbrock10_rescue_n10_npt21.txt  rosenbrock_n2_npt5.txt  sphere_n2_npt4.txt  sphere_n2_npt5.txt  sphere_n2_npt6.txt  sphere_onbound_n2_npt5.txt  sphere_tight_n2_npt5.txt
tests/states/geostep/: booth_npt5_001.txt  booth_npt5_002.txt  booth_npt5_003.txt  booth_npt5_004.txt  booth_npt5_005.txt  booth_npt5_006.txt  booth_npt5_007.txt  booth_npt5_008.txt  booth_npt5_009.txt  booth_npt5_011.txt  booth_npt5_re12_001.txt  booth_npt5_re12_002.txt  booth_npt5_re12_021.txt  rosenbrock10_npt21_001.txt  rosenbrock10_npt21_002.txt  rosenbrock10_npt21_003.txt  rosenbrock10_npt21_004.txt  rosenbrock10_npt21_005.txt  rosenbrock10_npt21_006.txt  rosenbrock10_npt21_065.txt  rosenbrock10_npt21_124.txt  rosenbrock10_npt21_183.txt  rosenbrock10_npt21_243.txt  rosenbrock10_npt21_re12_001.txt  rosenbrock10_npt21_re12_002.txt  rosenbrock10_npt21_re12_287.txt  rosenbrock10_npt30_001.txt  rosenbrock10_npt30_002.txt  rosenbrock10_npt30_296.txt  rosenbrock_npt5_001.txt  rosenbrock_npt5_002.txt  rosenbrock_npt5_003.txt  rosenbrock_npt5_004.txt  rosenbrock_npt5_005.txt  rosenbrock_npt5_006.txt  rosenbrock_npt5_012.txt  rosenbrock_npt5_019.txt  rosenbrock_npt5_026.txt  rosenbrock_npt5_033.txt  sphere_npt4_001.txt  (+15 more)
tests/states/inith/: booth_npt5_001.txt  booth_npt5_re12_001.txt  rosenbrock10_npt21_001.txt  rosenbrock10_npt21_re12_001.txt  rosenbrock10_npt30_001.txt  rosenbrock_npt5_001.txt  sphere_npt4_001.txt  sphere_npt5_001.txt  sphere_npt6_001.txt
tests/states/initq/: booth_npt5_001.txt  booth_npt5_re12_001.txt  rosenbrock10_npt21_001.txt  rosenbrock10_npt21_re12_001.txt  rosenbrock10_npt30_001.txt  rosenbrock_npt5_001.txt  sphere_npt4_001.txt  sphere_npt5_001.txt  sphere_npt6_001.txt
tests/states/initxf/: booth_npt5_001.txt  booth_npt5_re12_001.txt  rosenbrock10_npt21_001.txt  rosenbrock10_npt21_re12_001.txt  rosenbrock10_npt30_001.txt  rosenbrock_npt5_001.txt  sphere_npt4_001.txt  sphere_npt5_001.txt  sphere_npt6_001.txt
tests/states/rescue/: booth_npt5_001.txt  booth_npt5_re12_001.txt  booth_npt5_re12_002.txt  rosenbrock_npt5_001.txt  sphere_npt5_001.txt  sphere_npt6_001.txt  sphere_npt6_002.txt
tests/states/setdrop_tr/: booth_npt5_001.txt  booth_npt5_002.txt  booth_npt5_003.txt  booth_npt5_004.txt  booth_npt5_005.txt  booth_npt5_006.txt  booth_npt5_007.txt  booth_npt5_008.txt  booth_npt5_re12_001.txt  booth_npt5_re12_002.txt  booth_npt5_re12_012.txt  rosenbrock10_npt21_001.txt  rosenbrock10_npt21_002.txt  rosenbrock10_npt21_003.txt  rosenbrock10_npt21_004.txt  rosenbrock10_npt21_005.txt  rosenbrock10_npt21_006.txt  rosenbrock10_npt21_188.txt  rosenbrock10_npt21_370.txt  rosenbrock10_npt21_552.txt  rosenbrock10_npt21_735.txt  rosenbrock10_npt21_re12_001.txt  rosenbrock10_npt21_re12_002.txt  rosenbrock10_npt21_re12_830.txt  rosenbrock10_npt30_001.txt  rosenbrock10_npt30_002.txt  rosenbrock10_npt30_824.txt  rosenbrock_npt5_001.txt  rosenbrock_npt5_002.txt  rosenbrock_npt5_003.txt  rosenbrock_npt5_004.txt  rosenbrock_npt5_005.txt  rosenbrock_npt5_006.txt  rosenbrock_npt5_039.txt  rosenbrock_npt5_072.txt  rosenbrock_npt5_105.txt  rosenbrock_npt5_138.txt  sphere_npt4_001.txt  sphere_npt4_002.txt  sphere_npt4_017.txt  (+5 more)
tests/states/trrad/: booth_npt5_001.txt  booth_npt5_002.txt  booth_npt5_003.txt  booth_npt5_004.txt  booth_npt5_005.txt  booth_npt5_006.txt  booth_npt5_007.txt  booth_npt5_008.txt  booth_npt5_re12_001.txt  booth_npt5_re12_002.txt  booth_npt5_re12_012.txt  rosenbrock10_npt21_001.txt  rosenbrock10_npt21_002.txt  rosenbrock10_npt21_003.txt  rosenbrock10_npt21_004.txt  rosenbrock10_npt21_005.txt  rosenbrock10_npt21_006.txt  rosenbrock10_npt21_188.txt  rosenbrock10_npt21_370.txt  rosenbrock10_npt21_552.txt  rosenbrock10_npt21_735.txt  rosenbrock10_npt21_re12_001.txt  rosenbrock10_npt21_re12_002.txt  rosenbrock10_npt21_re12_830.txt  (+21 more)
(+265 files in other folders)
